2001-05-23  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* mahjongg.c (properties_callback): Connect to close signal
	  instead of delete_event. Fixes bug #53450.

2000-10-19  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/topic.dat: Fixed
	  er - I was being dumb below.  The menu item is now
	  fine.  Just the properties dialog button remains.

2000-10-19  Dan Mueth <d-mueth@uchicago.edu>

	* Makefile.am: added SUBDIRS = help
	* help/Makefile.am: Added this file, with SUBDIRS = C
	* help/C/topic.dat: Added this file 
	* help/C/Makefile.am: Added this file 
	* mahjongg.c: I didn't change this.  It currently calls
	  up the help doc okay, but we should change the call
	  to list Help with the pretty logo instead of just
	  listing 'mahjong'.  We also need to hook up a Help
	  button in the preferences dialog.  I have to run
	  now, so this will have to wait until later.

2000-09-13  Eric Baudais  <baudais@okstate.edu>

	* help/C/*: Added documentation to mahjongg.  It is not currently linked 
	into the program.

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* mahjongg.desktop: Added Swedish translation.

2000-05-06  Tuomas Kuosmanen  <tigert@tigert.gimp.org>

	* gnome-mahjongg.png: shaped up the icon a bit. It now has a shadow
	and it is a bit brighter too.

2000-04-26  Ian Peters  <itp@gnu.org>

	* mahjongg.c: use GNOME_STOCK_BUTTON_OK like a good little gnome program

2000-02-22  Chema Celorio <chema_gnome@celorio.com>

	* solubility.c: Undefine CHEAT_DEBUG for release
	
	* mahjongg.c (shuffle_tiles_callback): Fix bugs #4555 and #4490.
	Need to check for game_over == GAME_WON as well.

	* seta.png: Fixed the PNG file to fix #3458

1999-08-31  David Mansergh  <djm54@hermes.cam.ac.uk>

	* mahjongg.c (you_won): typo fix
	(check_free): corrected moves_left count
	(update_moves_left): removed unnecessary reassignment of moves_left

1999-08-09  Robert Brady  <rwb197@ecs.soton.ac.uk

	* solubility.[ch] : applied Irix compiling fix from David Kaelbling 