@@ -1,3 +1,7 @@
+2001-05-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* x11-gtk.cc (CreateDialog): Plug memory leak.
+
 2001-05-23  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
 	* Game.h, Game.cc: Change some unsigned int to int to fix bug
